# Q-POP-FerroDyn

./: .gitignore  CMakeLists.txt  Containerfile  Dockerfile  EMdynamic_initialize.cpp  EMdynamic_solver.cpp  EMdynamic_system.h  LICENSE  Makefile  Makefile.oneStep  README.md  electrostatic_solver.cpp  global.cpp  global.h  inoutput.cpp  material.h  materials.in  read.cpp  system_setting.in
.github/workflows/: pages.yml
backup/: EMdynamic_solver.cpp  EMdynamic_solver11.cpp
docs/: FerroDynFormulation.aux  FerroDynFormulation.nav  FerroDynFormulation.tex  PML_Tests.pptx  _config.yml
include/: EMdynamic_system.h  elastic_system.h  ferroelectric_system.h  geometry.h  global.h  inoutput.h  magnetic_system.h  write_h5.h
input/: Air.in  BaTiO3.in  PbTiO3.in  materials.in  system_setting.in
src/: EMdynamic_AbsorbingBoundary.cpp  EMdynamic_initialize.cpp  EMdynamic_solver.cpp  EMdynamic_solver.cpp.old  EMdynamic_system.h  elastic_dynamic_solver.cpp  elastic_initialize.cpp  elastic_static_solver.cpp  elastic_system.h  elastodynamics_AbsorbingBoundary.cpp  electrostatic_solver.cpp  ferroelectric_initialize.cpp  ferroelectric_solver.cpp  ferroelectric_system.h  geometry.cpp  geometry.h  global.cpp  global.h  inoutput.cpp  inoutput.h  magnetic_initialize.cpp  magnetic_system.h  main.cpp  main.cu  material.h  mathlib.h  read.cpp
src/io/: write_h5.cpp
